welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:-6: error: Missing closing brace `}' assumed here
try {
^hasTeen:1: error: expected class or object definition
def hasTeen(a:Int, b:Int, c:Int): Boolean = {if (a >= 13 && a <= 19 ||  b >= 13 && b <= 19 ||  c >= 13 && c <= 19) 
^